--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-next": "13.4.4",
     "framer-motion": "^10.12.16",
     "next": "13.4.4",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.24",
     "randomcolor": "^0.6.2",
     "react": "18.2.0",
