--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "framer-motion": "^10.12.16",
-    "next": "13.4.4",
+    "next": "^13.5.8",
     "next-themes": "^0.2.1",
     "postcss": "8.4.24",
     "randomcolor": "^0.6.2",
